# armor_detect

./: CMakeLists.txt  nodelet_info.xml  package.xml
cfg/: dynamic.cfg
include/cv_06/: main_class.h
launch/: MainClass.launch
src/: main6.cpp
